--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,12 @@
     },
     "lib": [
         "es2015"
+    ],
+    "include":[
+        "src/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "__template/*.spec.ts"
     ]
 }
