--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es2015",
         // "moduleResolution": "node",
         "sourceMap": true,
-        // "outDir": "dist"
+        "outDir": "dist"
     },
     "lib": [
         "es2015"
