--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "test": "mocha -r ts-node/register **/**/*spec.ts",
-    "coverage": "nyc npm run test"
+    "coverage": "nyc npm run test",
+    "electron": "electron src/straightedge-ui"
   },
   "repository": {
     "type": "git",
@@ -37,5 +38,8 @@
     "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "electron": "^8.2.5"
   }
 }
