--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "electron-log": "^4.1.2",
     "express": "^4.17.1",
