--- a/package.json
+++ b/package.json
@@ -32,18 +32,20 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "electron-log": "^4.1.2",
+    "mock-fs": "^4.12.0"
+  },
+  "devDependencies": {
+    "electron": "^8.2.5",
+    "sinon": "^9.0.2",
     "express": "^4.17.1",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
-  },
-  "devDependencies": {
-    "electron": "^8.2.5"
+    "typescript": "^3.8.3",
+    "chai": "^4.2.0"
   }
 }
