--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     ],
     "exclude": [
         "node_modules",
-        "**/__template/*.spec.ts"
+        "**/__template/*.spec.ts",
+        "**/*.spec.ts"
     ]
 }
