--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "build-backend": "tsc && cp -r src/config/* dist/config",
-    "test": "mocha -r ts-node/register **/**/*spec.ts",
+    "node-test":"mocha --exit -r ts-node/register src/*.spec.ts src/**/*.spec.ts",
+    "test": "npm run node-test",
     "coverage": "nyc npm run test",
     "electron": "npm run build-backend && electron ."
   },
@@ -27,25 +28,26 @@
   },
   "homepage": "https://github.com/Keith3895/straightedge#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "electron-log": "^4.1.2"
+  },
+  "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.2",
-    "electron-log": "^4.1.2",
-    "mock-fs": "^4.12.0"
-  },
-  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "electron": "^8.2.5",
-    "sinon": "^9.0.2",
     "express": "^4.17.1",
     "mocha": "^7.1.1",
+    "mock-fs": "^4.12.0",
     "nyc": "^15.0.1",
+    "sinon": "^9.0.2",
     "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
-    "typescript": "^3.8.3",
-    "chai": "^4.2.0"
+    "typescript": "^3.8.3"
   }
 }
