--- a/straightedge-ui/package.json
+++ b/straightedge-ui/package.json
@@ -37,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.0.5",
+    "pretty": "^2.0.0"
   }
 }
